--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ analytics:
 show_social: true          # show site description and social links in the footer
 show_excerpts: true        # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
+show_sidebar: true        # show a sidebar instead of the usual header
 
 # Menu
 
